project 동영상 링크 삽입

--- a/app/views/admin/projects/show.html.erb
+++ b/app/views/admin/projects/show.html.erb
@@ -41,6 +41,12 @@
                       </div>
                     </div>
                     <div class="control-group">
+                      <label class="control-label">동영상 링크</label>
+                      <div class="controls ">
+                        <%=raw @project.video_link %>
+                      </div>
+                    </div>
+                    <div class="control-group">
                       <label class="control-label">등록일시</label>
                       <div class="controls">
                         <span class=""><%= @project.created_at %></span>
