--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,7 @@
 <link rel="stylesheet" href="/css/main.css">
 <link rel="stylesheet" href="/css/scrolle.responsive.css">
 <link rel="stylesheet" href="/css/update.css">
+<link rel="stylesheet" href="/css/responsive-video.css">
 <%#= stylesheet_link_tag    "application", media: "all" %>
 <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
 <%= csrf_meta_tags %>
