--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -10,19 +10,25 @@
 		
 		<p class="margint5"><%= @project.sub_title %></p>
 		<div class="project-slider margint40">
-      <div class="slider-wrapper theme-default">
-        <% if is_mobile? %>
-         <div id="project-slider-wrapper" class="">
-        <% else %>
-          <div id="project-slider-wrapper" class="nivoSlider">
-        <% end %>
-          <% unless @project.project_pictures.empty? %>
-            <% @project.project_pictures.each do |picture| %>
-              <%= image_tag picture.project_big.url, class: "img-responsive" %>
-            <% end %>
-          <% end %>
-        </div>
+      <% unless @project.video_link.nil? %>
+      <div class="flex-video">
+        <%=raw @project.video_link %>
       </div>
+      <% else %>
+        <div class="slider-wrapper theme-default">
+          <% if is_mobile? %>
+           <div id="project-slider-wrapper" class="">
+          <% else %>
+            <div id="project-slider-wrapper" class="nivoSlider">
+          <% end %>
+            <% unless @project.project_pictures.empty? %>
+              <% @project.project_pictures.each do |picture| %>
+                <%= image_tag picture.project_big.url, class: "img-responsive" %>
+              <% end %>
+            <% end %>
+          </div>
+        </div>
+      <% end %>
 		</div>
 		<div class="row margint50 pos-left project-info-box">
 			<div class="col-lg-6">
