--- a/app/views/admin/projects/_form.html.erb
+++ b/app/views/admin/projects/_form.html.erb
@@ -71,10 +71,14 @@ $(function () {
                     <%= @project.video_link unless @project.video_link.nil? %>
                   </div>
                   <div class="controls">
-                    <div class="uploader hover" id="project_thumbnail">
-                      <%= f.input :project_thumbnail %>
-                    </div>
-                    <span class="help-inline">프로젝트 소개 vimeo 링크</span>
+                      <%= f.text_field :video_link %>
+                  </div>
+                  <span class="help-inline">프로젝트 소개 vimeo 링크</span>
+                </div>
+                <div class="control-group">
+                  <label class="control-label" for="focusedInput">카테고리</label>
+                  <div class="controls">
+                    <%= f.text_field :category, id: "focusdInput", class: "input-xlarge focused" %>
                   </div>
                 </div>
                 <div class="control-group">
