--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -27,7 +27,7 @@
 	</div>
 	<!-- HOME -->
 	<div id="home" class="intro">
-		<div class="pos-center">
+		<div class="pos-center mini_advertising">
 			<div class="intro_text">
 				MINI + ADVERTISING
 			</div>
