제작일자 삭제

--- a/app/views/admin/projects/_form.html.erb
+++ b/app/views/admin/projects/_form.html.erb
@@ -126,12 +126,12 @@ $(function () {
                   </div>
                 </div>
                 
-                <div class="control-group">
+                <!-- <div class="control-group">
                   <label class="control-label" for="focusedInput">프로젝트 제작일</label>
                   <div class="controls">
-                    <%= f.input :made_at, id: "focusdInput", class: "input-xlarge focused" %>
+                    <%#= f.input :made_at, id: "focusdInput", class: "input-xlarge focused" %>
                   </div>
-                </div>
+                </div> -->
                 
                 <div class="control-group">
                   <label class="control-label">내용</label>
